--- a/style.css
+++ b/style.css
@@ -1,17 +1,57 @@
+@font-face {
+  font-family: "Skolar Sans Latin Web Bold";
+  src: url("assets/fonts/SkolarSansLatnWeb-Bd.eot");
+  src: url("assets/fonts/SkolarSansLatnWeb-Bd.eot?#iefix")
+      format("embedded-opentype"),
+    url("assets/fonts/SkolarSansLatnWeb-Bd.woff") format("woff"),
+    url("assets/fonts/SkolarSansLatnWeb-Bd.woff2") format("woff2");
+  font-weight: 700; /* Bold */
+  font-style: normal;
+}
+@font-face {
+  font-family: "Skolar Sans Latin Web";
+  src: url("assets/fonts/SkolarSansLatnWeb-Lt.eot");
+  src: url("assets/fonts/SkolarSansLatnWeb-Lt.eot?#iefix")
+      format("embedded-opentype"),
+    url("assets/fonts/SkolarSansLatnWeb-Lt.woff") format("woff"),
+    url("assets/fonts/SkolarSansLatnWeb-Lt.woff2") format("woff2");
+  font-weight: 300; /* Light */
+  font-style: normal;
+}
+
 body {
   color: #014242;
   margin: 100px;
+  font-family: "Skolar Sans Latin Web";
 }
 body .pin {
   opacity: 0;
+}
+h1,
+h2,
+h3,
+.subtitle strong,
+.city {
+  font-family: "Skolar Sans Latin Web Bold";
+}
+.subtitle {
+  font-size: 20px;
+  margin-top: 50px;
+}
+.green,
+.pos {
+  color: #31d970;
+}
+.neg {
+  color: #ff8055;
 }
 .map {
   position: relative;
 }
 .map > img {
-    max-width: 100vw;
-    max-height: 100vh;
-    width: 800px;
+  max-width: 100vw;
+  max-height: 100vh;
+  width: 800px;
 }
 .map .pin,
 .map .city,
@@ -20,6 +60,7 @@ body .pin {
   animation-duration: 1s;
   animation-name: fallDown;
   animation-fill-mode: forwards;
+  opacity: 0;
 }
 .city {
   background: #014242;
@@ -27,10 +68,11 @@ body .pin {
   border-radius: 5px;
   color: #fff;
   font-weight: bold;
+  line-height: 1.1em;
 }
 .city.left,
 .info.left {
-    transform: translateX(-100%);
+  transform: translateX(-100%);
 }
 .info {
   font-size: 12px;
@@ -56,12 +98,6 @@ body .pin {
 .info table td:nth-child(even) {
   font-weight: bold;
   color: #014242;
-}
-.info table .neg {
-  color: #ff8055;
-}
-.info table .pos {
-  color: #31d970;
 }
 .pinsLayer,
 .cityLayer,
